# radnn

./: .gitignore  .stignore  LICENSE  README.md  ecrad-01-sd-v240823.ipynb  ecrad-radiation-user-guide-2022.md  ecrad01-gprof.ipynb  env.md  listingdir.sh  mkdocs.yml  mkdocs.yml.bkp  re  report-gprof-ecrad-2024-07-26.txt  report-gprof-ecrad-eo01-2024-07-26.txt  rfmip02-clear-sky-02.ipynb  rfmip02-clear-sky-NN-02.ipynb  rrtmgp_rfmip_lw_02.ipynb  sys  sys.sync-conflict-20250119-141002-OMPIN3P  ukk23eo01-gprof.ipynb  ukk23test01-rfmip-clear-sky-v241023.ipynb  ukk23test01-rfmip-clear-sky.ipynb  ukk23test01-train-v1.ipynb  ukk23test01-train-v2.ipynb
.stfolder/: syncthing-folder-a290f0.txt
aux/: report-gprof-ecrad-2024-11-05.txt
docs/: 404.html  ecrad-radiation-user-guide-2022.html  env.html  index.html  listing.txt  listingdata.html  listingdt.txt  listingsrc.html  notes.html  references.html  search.html  sitemap.xml
docs/assets/: cheatsheet.html  extra.css  katex.js
docs/aux/: exam_rrtm_rrtm.txt  report-gprof-ecrad-eo01-2024-11-05.txt
docs/css/: extra.css
docs/docs-assets/: extra.css
docs/ecrad/: index.html
docs/ecrad-radiation-user-guide-2022/: index.html
docs/notes/: index.html
docs/references/: index.html
docs/search/: search_index.json
docs/tf-lib/: SavedModel .pb
docs/ukk22test02/: Contributing.html  index.html
docs/ukk23eo01/: index.html
docs/ukk23test01/: Contributing.html  index.html
ecrad/: data
ecrad/practical/: gmon.out
src/: README.md  _sdumont-access.ipynb  data-variables.ipynb  ecrad-01-gc.ipynb  ecrad-radiation-user-guide-2022.md  ecrad01-NN-gprof.ipynb  ecrad01-gprof.ipynb  env.md  envset.md  listingdata.html  listingsrc.html  notes.md  references.bib  references.md  rfmip01-clear-sky.ipynb  rfmip02-clear-sky-02.ipynb  rfmip02-clear-sky-NN-02.ipynb  rfmip02-clear-sky-NN.ipynb  rfmip02-clear-sky.ipynb  rrtmgp_rfmip_lw-test01.ipynb  rrtmgp_rfmip_lw.F90  sdumont-access.ipynb  sdumont-setup-old_bkp.ipynb  sdumont-setup.ipynb  spwd.txt  ukk23test01-train-sd-v240823.ipynb  ukk23test01-train-v1.ipynb  ukk23test01-train-v2.ipynb  zz_src-aux$
src/SDumont/: environment-setup.md  sing-manu-sd.md  singularity-containers.ipynb  singularity-containers.md
src/Singularity-Container/: singularity-containers-sd_2024-06-10.ipynb  singularity-containers-sd_2024-06-11.ipynb  singularity-containers-sd_2025-05-02.ipynb
src/assets/: cheatsheet.md  extra.css
src/aux/: ecrad01-gprof.yml  exam_rfmi_data.txt  exam_rrtm_data.txt
src/burgers2d-tf-dis/: DRAFT.md  README.md  burgers2d-01.md  burgers2d-01.py  burgers2d-02.md  burgers2d-02.py  burgers2ddiff.py  decription-01.md  description-02.md  discovery1d.py  log.txt  log_pinn.txt
src/css/: extra.css
src/docs-assets/: cheatsheet.md  extra.css  extra.css.bak
src/ecrad/: README.md  data
src/ecrad-aux/: exam_rfmi_flux.txt  neur_data.txt  neural-data-dir-list.txt  requirements.yml  rrtm_data.txt  ukk23test01-train-v2.yml
src/tf-lib/: gen_model.ipynb  hello_tf  install-01.ipynb  test_load_model_f
src/torchfort/: 0_notes-torchfort$.txt  0_setup-container.ipynb  CMakeLists.txt  Untitled.ipynb  burgers1d.ipynb  burgers1d.md  cmakelists.ipynb  comp-outs-conta.ipynb  container-make.ipynb  dock-to-singu.ipynb  jl-insid-ctner.ipynb  setup-container.ipynb  setup-other.ipynb  sing  test-openacc.f90  tfort-singu-test-sd.ipynb  torchfort-sd.ipynb  torchfort_nvhpc.ipynb  train-01.ipynb  train-02.ipynb  train-jl.ipynb  train-sd.ipynb  train-sty.ipynb  train.ipynb  train_dist_cmakelists.ipynb  train_distr_03-f90.ipynb  train_distrib-f90-newdir-Copy1.ipynb  train_distrib-f90.ipynb  train_distrib-sd-slurm-02.ipynb  train_distrib.ipynb  train_distrib.srm  train_distributed-f90.ipynb  train_distributed-sd-slurm.ipynb  train_distributed-sd.ipynb  zzto
src/torchfort-ipynb/: container-make.ipynb  openacc-tests.ipynb  sing  train_distr_03-f90.ipynb  train_distrib-f90-Copy1.ipynb  train_distrib-sd-slurm.ipynb  train_distrib-sd.ipynb
src/torchfort/2025-07-12-c/examples/fortran/burgers03/: CMakeLists.txt  burgers03.f90  burgers_config.yaml  compare_results.py  config_burgers.yaml  config_burgers_torchscript.yaml  generate_burgers_model.py  generate_simple_model.py  save_inference_model.py  test_load.f90  test_torchfort.f90
src/torchfort/2025-07-15-a/examples/fortran/burgers/: CMakeLists.txt  burgers1d.py  burgers1d_pytorch_model_and_data_generator.py  burgers_inference.f90  burgers_inference_test.f90  burgers_train.f90  compare_inference_outputs.py  compare_results.py  compare_xt_tensors.py  config_burgers_inference.yaml  config_burgers_inference_architecture.yaml  config_simple_inference.yaml  create_empty_loss.py  evaluate_fortran_trained_model_in_python.py  inspect_model.py  save_inference_model_for_fortran.py  simple_inference.f90  simple_inference_model.py  simple_linear_model.py  temp_save_inference_model.py
src/torchfort/2025-07-17-a/: CMakeLists.txt  README.md  burgers1d_original.py  burgers_inference.f90  burgers_inference.py  burgers_train.f90  burgers_train_config.yaml  compare_data.py  compare_inference_results.py  generate_burgers_model.py  test_pinn_inference.py
src/torchfort/examples/fortran/train_distr_03/: CMakeLists.txt  train_distr_03.f90  train_distr_03.ipynb
src/torchfort/torchfort_local/examples/fortran/burgers/: CMakeLists.txt  burgers.f90  burgers02.f90  burgers03.f90  burgers04.f90  burgers_inference_model.pt  burgers_inference_net.pt  burgers_loss.pt  burgers_model.pt  burgers_model_trained.pt  burgers_model_trained_04.pt  burgers_trained_net.pt  config_burgers.yaml  config_inference_net.yaml  generate_burgers_model.py
src/torchfort/torchfort_local/examples/fortran/burgers03/: CMakeLists.txt  burgers03.f90  burgers1d_original_run.py  burgers_loss.pt  burgers_model.pt  compare_results.py  config_burgers.yaml  generate_burgers_model.py  generate_model.py
src/ukk22test02/: README.md
src/ukk23eo01/: README.md  data
src/ukk23test01/: README.md
ukk23eo01/: README.md  data
ukk23eo01/practical/: gmon.out
ukk23eo01/rrtmgp-nn/: README.md
ukk23test01/: README.md
(+764 files in other folders)
